Graphic Adjustments - Fix header falling all the way down on scroll - Adjust Weekly iteration tag spacing - Adjust top padding of flashcard prompt

--- a/app/assets/stylesheets/_flashcards.scss
+++ b/app/assets/stylesheets/_flashcards.scss
@@ -11,7 +11,7 @@
 }
 
 .flashcard-prompt {
-  padding-top: 2.25em;
+  padding-top: 1em;
 }
 
 .flashcards-count {
