--- a/app/assets/stylesheets/_video.scss
+++ b/app/assets/stylesheets/_video.scss
@@ -145,7 +145,7 @@
   .topic-label {
     display: inline;
     font-size: 0.5em;
-    margin: 0 0.4em;
+    margin: 0 1em 0 0;
     padding: 3px 10px;
   }
 }
